1.fix bug:之前selectedOptionArr在插件初始化时,会初始化为空,先改为如果有配置selectOptionArr的值,则使用配置; 2.增加width(用于指定input的innerWidth,方便被选中项的宽度计算)和hGap(用于设置被选中项的水平间距)配置参数;

--- a/src/core/index.less
+++ b/src/core/index.less
@@ -88,7 +88,7 @@ ul {
       cursor: pointer;
       .type-name-text{
         display: inline-block;
-        width: 80px;
+        width: 80%;
       }
       .close-btn{
         position: absolute;
